package model;

import lombok.Getter;
import lombok.Setter;

@Getter
@Setter
public class Uom {
    private Long uomId;
    private String code;
    private String name;
}
