---
config:
  layout: elk
---
erDiagram
	direction TB
	USER {
		bigint user_id PK ""  
		string username UK ""  
		string full_name  ""  
		string email UK ""  
		string phone  ""  
		string password_hash  ""  
		string status  ""  
		bigint warehouse_id FK ""  
		bigint created_by FK ""  
		datetime created_at  ""  
		datetime last_login_at  ""  
		string last_login_ip  ""  
		boolean is_deleted  ""  
	}

	ROLE {
		bigint role_id PK ""  
		string name UK ""  
		string description  ""  
	}

	PERMISSION {
		bigint permission_id PK ""  
		string code UK ""  
		string name  ""  
	}

	USER_ROLE {
		bigint user_id FK ""  
		bigint role_id FK ""  
		datetime assigned_at  ""  
	}

	ROLE_PERMISSION {
		bigint role_id FK ""  
		bigint permission_id FK ""  
	}

	AUDIT_LOG {
		bigint audit_id PK ""  
		bigint user_id FK ""  
		string action  ""  
		string entity_name  ""  
		bigint entity_id  ""  
		string metadata_json  ""  
		datetime created_at  ""  
	}

	WAREHOUSE {
		bigint warehouse_id PK ""  
		string code UK ""  
		string name  ""  
		string address  ""  
		string status  ""  
		datetime created_at  ""  
	}

	ZONE {
		bigint zone_id PK ""  
		bigint warehouse_id FK ""  
		string code  ""  
		string name  ""  
		string zone_type  ""  
		string status  ""  
	}

	SLOT {
		bigint slot_id PK ""  
		bigint zone_id FK ""  
		string code UK ""  
		int row_no  ""  
		int col_no  ""  
		decimal max_capacity  ""  
		string capacity_uom  ""  
		string status  ""  
	}

	UOM {
		bigint uom_id PK ""  
		string code UK ""  
		string name  ""  
	}

	CATEGORY {
		bigint category_id PK ""  
		string name  ""  
		bigint parent_id FK ""  
	}

	PRODUCT {
		bigint product_id PK ""  
		string sku UK ""  
		string name  ""  
		bigint category_id FK ""  
		bigint base_uom_id FK ""  
		string barcode  ""  
		decimal weight  ""  
		decimal length  ""  
		decimal width  ""  
		decimal height  ""  
		datetime created_at  ""  
	}

	PRODUCT_VARIANT {
		bigint variant_id PK ""  
		bigint product_id FK ""  
		string variant_sku UK ""  
		string color  ""  
		string size  ""  
		string barcode  ""  
		string status  ""  
	}

	SUPPLIER {
		bigint supplier_id PK ""  
		string code UK ""  
		string name  ""  
		string email  ""  
		string phone  ""  
		string address  ""  
		string status  ""  
	}

	CUSTOMER {
		bigint customer_id PK ""  
		string code UK ""  
		string name  ""  
		string email  ""  
		string phone  ""  
		string address  ""  
		string status  ""  
	}

	CARRIER {
		bigint carrier_id PK ""  
		string name  ""  
		string carrier_type  ""  
		string phone  ""  
		string note  ""  
	}

	PURCHASE_ORDER {
		bigint po_id PK ""  
		string po_number UK ""  
		bigint supplier_id FK ""  
		date expected_delivery_date  ""  
		string status  ""  
		bigint imported_by FK ""  
		datetime imported_at  ""  
		string source_file_name  ""  
		string note  ""  
	}

	PURCHASE_ORDER_LINE {
		bigint po_line_id PK ""  
		bigint po_id FK ""  
		bigint variant_id FK ""  
		decimal qty_ordered  ""  
		decimal unit_price  ""  
		decimal tax_rate  ""  
		string currency  ""  
	}

	GOODS_RECEIPT {
		bigint grn_id PK ""  
		string grn_number UK ""  
		bigint po_id FK ""  
		bigint warehouse_id FK ""  
		string status  ""  
		bigint created_by FK ""  
		bigint approved_by FK ""  
		datetime created_at  ""  
		datetime approved_at  ""  
		string delivered_by  ""  
		datetime received_at  ""  
		string note  ""  
	}

	GOODS_RECEIPT_LINE {
		bigint grn_line_id PK ""  
		bigint grn_id FK ""  
		bigint po_line_id FK ""  
		bigint variant_id FK ""  
		decimal qty_expected  ""  
		decimal qty_received  ""  
		decimal qty_good  ""  
		decimal qty_missing  ""  
		decimal qty_damaged  ""  
		decimal qty_extra  ""  
		string note  ""  
	}

	PUTAWAY_ORDER {
		bigint putaway_id PK ""  
		bigint grn_id FK ""  
		string status  ""  
		bigint created_by FK ""  
		datetime created_at  ""  
	}

	PUTAWAY_LINE {
		bigint putaway_line_id PK ""  
		bigint putaway_id FK ""  
		bigint grn_line_id FK ""  
		bigint to_slot_id FK ""  
		decimal qty_putaway  ""  
		bigint performed_by FK ""  
		datetime performed_at  ""  
	}

	SALES_ORDER {
		bigint so_id PK ""  
		string so_number UK ""  
		bigint customer_id FK ""  
		date requested_ship_date  ""  
		string ship_to_address  ""  
		string status  ""  
		bigint imported_by FK ""  
		datetime imported_at  ""  
		string note  ""  
	}

	SALES_ORDER_LINE {
		bigint so_line_id PK ""  
		bigint so_id FK ""  
		bigint variant_id FK ""  
		decimal qty_ordered  ""  
		decimal unit_price  ""  
		decimal discount  ""  
	}

	GOODS_DELIVERY_NOTE {
		bigint gdn_id PK ""  
		string gdn_number UK ""  
		bigint warehouse_id FK ""  
		bigint so_id FK ""  
		bigint transfer_id FK ""  
		string gdn_type  ""  
		string status  ""  
		bigint created_by FK ""  
		datetime created_at  ""  
		datetime confirmed_at  ""  
	}

	GOODS_DELIVERY_LINE {
		bigint gdn_line_id PK ""  
		bigint gdn_id FK ""  
		bigint so_line_id FK ""  
		bigint transfer_line_id FK ""  
		bigint variant_id FK ""  
		decimal qty_required  ""  
		decimal qty_picked  ""  
		decimal qty_packed  ""  
		decimal qty_shipped  ""  
	}

	PICK_WAVE {
		bigint wave_id PK ""  
		bigint gdn_id FK ""  
		string status  ""  
		bigint created_by FK ""  
		datetime created_at  ""  
	}

	PICK_TASK {
		bigint pick_task_id PK ""  
		bigint wave_id FK ""  
		bigint assigned_to FK ""  
		bigint assigned_by FK ""  
		string status  ""  
		datetime assigned_at  ""  
		datetime started_at  ""  
		datetime completed_at  ""  
	}

	PICK_TASK_LINE {
		bigint pick_line_id PK ""  
		bigint pick_task_id FK ""  
		bigint gdn_line_id FK ""  
		bigint from_slot_id FK ""  
		decimal qty_to_pick  ""  
		decimal qty_picked  ""  
		string pick_status  ""  
		string note  ""  
	}

	PACKING {
		bigint pack_id PK ""  
		bigint gdn_id FK ""  
		string status  ""  
		bigint packed_by FK ""  
		datetime packed_at  ""  
		string package_label  ""  
	}

	SHIPMENT {
		bigint shipment_id PK ""  
		string shipment_number UK ""  
		bigint gdn_id FK ""  
		bigint carrier_id FK ""  
		string shipment_type  ""  
		string status  ""  
		datetime created_at  ""  
		datetime picked_up_at  ""  
		datetime delivered_at  ""  
		string tracking_code  ""  
		string note  ""  
	}

	TRANSFER_ORDER {
		bigint transfer_id PK ""  
		string transfer_number UK ""  
		bigint from_warehouse_id FK ""  
		bigint to_warehouse_id FK ""  
		date planned_date  ""  
		string reason  ""  
		string status  ""  
		bigint created_by FK ""  
		bigint approved_by FK ""  
		datetime created_at  ""  
		datetime approved_at  ""  
	}

	TRANSFER_ORDER_LINE {
		bigint transfer_line_id PK ""  
		bigint transfer_id FK ""  
		bigint variant_id FK ""  
		decimal qty_requested  ""  
		decimal qty_dispatched  ""  
		decimal qty_received  ""  
	}

	TRANSFER_RECEIPT {
		bigint tr_id PK ""  
		string tr_number UK ""  
		bigint transfer_id FK ""  
		bigint to_warehouse_id FK ""  
		string status  ""  
		bigint received_by FK ""  
		datetime received_at  ""  
		string note  ""  
	}

	TRANSFER_RECEIPT_LINE {
		bigint tr_line_id PK ""  
		bigint tr_id FK ""  
		bigint transfer_line_id FK ""  
		bigint to_slot_id FK ""  
		decimal qty_received  ""  
	}

	INVENTORY_BALANCE {
		bigint inv_balance_id PK ""  
		bigint warehouse_id FK ""  
		bigint slot_id FK ""  
		bigint variant_id FK ""  
		string condition  ""  
		decimal qty_on_hand  ""  
		decimal qty_reserved  ""  
		decimal qty_available  ""  
		datetime updated_at  ""  
	}

	INVENTORY_RESERVATION {
		bigint reservation_id PK ""  
		bigint warehouse_id FK ""  
		bigint gdn_line_id FK ""  
		bigint variant_id FK ""  
		decimal qty_reserved  ""  
		string status  ""  
		datetime created_at  ""  
	}

	INVENTORY_TXN {
		bigint txn_id PK ""  
		datetime txn_at  ""  
		string txn_type  ""  
		bigint warehouse_id FK ""  
		bigint from_slot_id FK ""  
		bigint to_slot_id FK ""  
		bigint variant_id FK ""  
		string condition  ""  
		decimal qty_delta  ""  
		string ref_doc_type  ""  
		bigint ref_doc_id  ""  
		string note  ""  
		bigint created_by FK ""  
	}

	STOCK_MOVE {
		bigint move_id PK ""  
		string move_number UK ""  
		bigint warehouse_id FK ""  
		string status  ""  
		bigint created_by FK ""  
		datetime created_at  ""  
	}

	STOCK_MOVE_LINE {
		bigint move_line_id PK ""  
		bigint move_id FK ""  
		bigint variant_id FK ""  
		bigint from_slot_id FK ""  
		bigint to_slot_id FK ""  
		decimal qty_moved  ""  
		datetime moved_at  ""  
		bigint moved_by FK ""  
	}

	INVENTORY_COUNT {
		bigint count_id PK ""  
		string count_number UK ""  
		bigint warehouse_id FK ""  
		string scope_type  ""  
		string status  ""  
		datetime planned_at  ""  
		datetime started_at  ""  
		datetime finished_at  ""  
		boolean freeze_transactions  ""  
		bigint created_by FK ""  
		string note  ""  
	}

	INVENTORY_COUNT_TASK {
		bigint count_task_id PK ""  
		bigint count_id FK ""  
		bigint assigned_to FK ""  
		bigint assigned_by FK ""  
		string status  ""  
		datetime assigned_at  ""  
		datetime done_at  ""  
	}

	INVENTORY_COUNT_LINE {
		bigint count_line_id PK ""  
		bigint count_task_id FK ""  
		bigint slot_id FK ""  
		bigint variant_id FK ""  
		string condition  ""  
		decimal qty_system  ""  
		decimal qty_actual  ""  
		decimal qty_diff  ""  
		string note  ""  
	}

	STOCK_ADJUSTMENT {
		bigint adj_id PK ""  
		string adj_number UK ""  
		bigint warehouse_id FK ""  
		bigint count_id FK ""  
		string reason  ""  
		string status  ""  
		bigint created_by FK ""  
		bigint approved_by FK ""  
		datetime created_at  ""  
		datetime approved_at  ""  
		string note  ""  
	}

	STOCK_ADJUSTMENT_LINE {
		bigint adj_line_id PK ""  
		bigint adj_id FK ""  
		bigint slot_id FK ""  
		bigint variant_id FK ""  
		string condition  ""  
		decimal qty_delta  ""  
	}

	WAREHOUSE||--o{USER:"employs"
	USER||--o{USER_ROLE:"has"
	ROLE||--o{USER_ROLE:"assigned"
	ROLE||--o{ROLE_PERMISSION:"grants"
	PERMISSION||--o{ROLE_PERMISSION:"includes"
	USER||--o{AUDIT_LOG:"writes"
	WAREHOUSE||--o{ZONE:"contains"
	ZONE||--o{SLOT:"contains"
	CATEGORY||--o{PRODUCT:"groups"
	UOM||--o{PRODUCT:"base_uom"
	PRODUCT||--o{PRODUCT_VARIANT:"has"
	SUPPLIER||--o{PURCHASE_ORDER:"supplies"
	PURCHASE_ORDER||--o{PURCHASE_ORDER_LINE:"has"
	PRODUCT_VARIANT||--o{PURCHASE_ORDER_LINE:"ordered_item"
	PURCHASE_ORDER||--o{GOODS_RECEIPT:"referenced_by"
	WAREHOUSE||--o{GOODS_RECEIPT:"receives_into"
	GOODS_RECEIPT||--o{GOODS_RECEIPT_LINE:"has"
	PURCHASE_ORDER_LINE||--o{GOODS_RECEIPT_LINE:"matched_line"
	PRODUCT_VARIANT||--o{GOODS_RECEIPT_LINE:"received_item"
	GOODS_RECEIPT||--o{PUTAWAY_ORDER:"triggers"
	PUTAWAY_ORDER||--o{PUTAWAY_LINE:"has"
	GOODS_RECEIPT_LINE||--o{PUTAWAY_LINE:"for_grn_line"
	SLOT||--o{PUTAWAY_LINE:"destination_slot"
	CUSTOMER||--o{SALES_ORDER:"places"
	SALES_ORDER||--o{SALES_ORDER_LINE:"has"
	PRODUCT_VARIANT||--o{SALES_ORDER_LINE:"sold_item"
	WAREHOUSE||--o{GOODS_DELIVERY_NOTE:"ships_from"
	SALES_ORDER||--o{GOODS_DELIVERY_NOTE:"for_so"
	GOODS_DELIVERY_NOTE||--o{GOODS_DELIVERY_LINE:"has"
	SALES_ORDER_LINE||--o{GOODS_DELIVERY_LINE:"demand_line"
	GOODS_DELIVERY_NOTE||--o{PICK_WAVE:"generates"
	PICK_WAVE||--o{PICK_TASK:"contains"
	PICK_TASK||--o{PICK_TASK_LINE:"has"
	SLOT||--o{PICK_TASK_LINE:"source_slot"
	GOODS_DELIVERY_NOTE||--o{PACKING:"packing_doc"
	GOODS_DELIVERY_NOTE||--o{SHIPMENT:"shipment_doc"
	CARRIER||--o{SHIPMENT:"carrier"
	WAREHOUSE||--o{INVENTORY_BALANCE:"holds"
	SLOT||--o{INVENTORY_BALANCE:"at_slot"
	PRODUCT_VARIANT||--o{INVENTORY_BALANCE:"for_item"
	WAREHOUSE||--o{INVENTORY_RESERVATION:"reserves_in"
	GOODS_DELIVERY_LINE||--o{INVENTORY_RESERVATION:"for_gdn_line"
	PRODUCT_VARIANT||--o{INVENTORY_RESERVATION:"reserved_item"
	WAREHOUSE||--o{INVENTORY_TXN:"logs_txn"
	PRODUCT_VARIANT||--o{INVENTORY_TXN:"txn_item"
	SLOT||--o{INVENTORY_TXN:"txn_from_slot"
	SLOT||--o{INVENTORY_TXN:"txn_to_slot"
	WAREHOUSE||--o{STOCK_MOVE:"has_moves"
// [MermaidChart: fd7870a0-24aa-4aad-b819-107d49ab2e6c]
	STOCK_MOVE||--o{STOCK_MOVE_LINE:"has_lines"
	PRODUCT_VARIANT||--o{STOCK_MOVE_LINE:"move_item"
	SLOT||--o{STOCK_MOVE_LINE:"move_from_slot"
	SLOT||--o{STOCK_MOVE_LINE:"move_to_slot"
	WAREHOUSE||--o{INVENTORY_COUNT:"has_counts"
	INVENTORY_COUNT||--o{INVENTORY_COUNT_TASK:"assigns"
	INVENTORY_COUNT_TASK||--o{INVENTORY_COUNT_LINE:"records"
	SLOT||--o{INVENTORY_COUNT_LINE:"counted_slot"
	PRODUCT_VARIANT||--o{INVENTORY_COUNT_LINE:"counted_item"
	INVENTORY_COUNT||--o{STOCK_ADJUSTMENT:"generates"
	STOCK_ADJUSTMENT||--o{STOCK_ADJUSTMENT_LINE:"has_lines"
	SLOT||--o{STOCK_ADJUSTMENT_LINE:"adj_slot"
	PRODUCT_VARIANT||--o{STOCK_ADJUSTMENT_LINE:"adj_item"
	WAREHOUSE||--o{TRANSFER_ORDER:"creates_transfer"
	TRANSFER_ORDER||--o{TRANSFER_ORDER_LINE:"has_lines"
	PRODUCT_VARIANT||--o{TRANSFER_ORDER_LINE:"transfer_item"
	TRANSFER_ORDER||--o{GOODS_DELIVERY_NOTE:"dispatch_doc"
	TRANSFER_ORDER_LINE||--o{GOODS_DELIVERY_LINE:"dispatch_line"
	TRANSFER_ORDER||--o{TRANSFER_RECEIPT:"receive_doc"
	TRANSFER_RECEIPT||--o{TRANSFER_RECEIPT_LINE:"has_lines"
	TRANSFER_ORDER_LINE||--o{TRANSFER_RECEIPT_LINE:"receive_line"
	SLOT||--o{TRANSFER_RECEIPT_LINE:"receive_to_slot"